# qt-arkanoid

./: .gitignore  CMakeLists.txt  Makefile  README.md  install-requirements.sh  notes.md  resources.qrc  run.sh
hello-world/: CMakeLists.txt
resources/: README.md
resources/levels/: level1.json  level2.json  level3.json
src/: AppState.cpp  AppState.h  Ball.cpp  Ball.h  Brick.cpp  Brick.h  CounterWorker.cpp  CounterWorker.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  HighScoreDialog.cpp  HighScoreDialog.h  HighScoreManager.cpp  HighScoreManager.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Paddle.cpp  Paddle.h  Particle.cpp  Particle.h  PowerUp.cpp  PowerUp.h  SettingsDialog.cpp  SettingsDialog.h  SoundManager.cpp  SoundManager.h  main.cpp  qml.qrc
src/qml/: Main.qml
step0/hello-world/: CMakeLists.txt
step0/hello-world/src/: main.cpp
step0/qml-hello/: CMakeLists.txt  main.cpp
step0/qml-hello/src/: Main.qml  main.cpp  qml.qrc
step0/widgets-signals/: CMakeLists.txt
step0/widgets-signals/src/: main.cpp
widgets-signals/: CMakeLists.txt
widgets-signals/src/: main.cpp
